--- a/deep-learning.html
+++ b/deep-learning.html
@@ -134,7 +134,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tencent/jobs/4473234002'>Job Application for Deep Learning Framework Research Engineer at Tencent</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tencent/jobs/4473234002'>Job Application for Deep Learning Framework Research Engineer at Tencent</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -146,7 +146,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4480804002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
+<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4480804002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -228,7 +228,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Utrecht, Netherlands</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://jobs.courier-journal.com/Job?data=8NfUkj5irhJJqBry4onblDvXiMOQ6/TlKDRN4rW/6QcxQO0PlqyYIg%3D%3D'>Data Scientist Deep Learning job in Louisville, KY - The Courier Journal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.courier-journal.com/Job?data=8NfUkj5irhJJqBry4onblDvXiMOQ6/TlKDRN4rW/6QcxQO0PlqyYIg%3D%3D'>Data Scientist Deep Learning job in Louisville, KY - The Courier Journal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
@@ -236,7 +236,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fyusion/31540b34-b559-4f3b-8c0a-688d504d7288'>Fyusion - Computer Vision Intern - Deep Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/fyusion/31540b34-b559-4f3b-8c0a-688d504d7288'>Fyusion - Computer Vision Intern - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
@@ -260,7 +260,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/F88346D7C1'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/F88346D7C1'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -308,7 +308,7 @@ with a?...</p>
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIdaVfwK&k=Job&j=oA4cafwK&__jvst=Employee&__jvsd=s8vU5hwo&__jvsc=Twitter&bid=ns9XRLwF'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIdaVfwK&k=Job&j=oA4cafwK&__jvst=Employee&__jvsd=s8vU5hwo&__jvsc=Twitter&bid=ns9XRLwF'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-09-26</p>
 <hr/>
@@ -320,7 +320,7 @@ with a?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-09-24</p>
 <hr/>
-<h5><a href='https://abbvie.referrals.selectminds.com/jobs/post-doctoral-fellow-in-deep-learning-11898'>Post-Doctoral Fellow in Deep Learning - AbbVie Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abbvie.referrals.selectminds.com/jobs/post-doctoral-fellow-in-deep-learning-11898'>Post-Doctoral Fellow in Deep Learning - AbbVie Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
@@ -360,7 +360,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ai-jobs.net/job/solutions-architect-energy-deep-learning/'>Solutions Architect, Energy - Deep Learning | ai-jobs.net</a></h5> 
+<h5><a href='https://ai-jobs.net/job/solutions-architect-energy-deep-learning/'>Solutions Architect, Energy - Deep Learning | ai-jobs.net</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-17</p>
 <hr/>
@@ -397,7 +397,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862075'>Job Application for Research Scientist (Machine Learning/Deep Learning) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862075'>Job Application for Research Scientist (Machine Learning/Deep Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -406,7 +406,7 @@ Skills at Crisalix.</p>
 <p>6 days ago ... Compute Performance Developer Technology Intern - CUDA | US, CA, Santa 
 Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dmai/910b3672-d7de-4e74-ad2c-49700bbb71c1'>DMAI - Software Engineer, Deep Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/dmai/910b3672-d7de-4e74-ad2c-49700bbb71c1'>DMAI - Software Engineer, Deep Learning</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-09-08</p>
 <hr/>
@@ -494,7 +494,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
