--- a/product-manager.html
+++ b/product-manager.html
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698669537-digital-product-manager'>Biogen Digital Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698669537-digital-product-manager'>Biogen Digital Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oslo, Norway</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -110,7 +110,7 @@
 <p><span class="badge badge-light">Canberra</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/datto/jobs/1741248?gh_src=14f0a1e01'>Job Application for Product Manager, Datto Networking WiFi at Datto Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/datto/jobs/1741248?gh_src=14f0a1e01'>Job Application for Product Manager, Datto Networking WiFi at Datto Inc.</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -166,7 +166,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/kjssi3eih7jhcc9fppb4zacapa'>Product Manager | Opportunity Portal</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/kjssi3eih7jhcc9fppb4zacapa'>Product Manager | Opportunity Portal</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -182,7 +182,7 @@
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://elevate-security.breezy.hr/p/6cb3ed84968b-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elevate-security.breezy.hr/p/6cb3ed84968b-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -202,7 +202,7 @@
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -262,7 +262,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://joininterface.recruiterbox.com/jobs/fk0jnha/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://joininterface.recruiterbox.com/jobs/fk0jnha/'>
     Lead Product Designer at interface.ai
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -306,7 +306,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://vizrt.applytojob.com/apply/dEdGNsUPpl/Product-Manager-Pro-AV-NewTek'>Product Manager, Pro A/V (NewTek) - Vizrt - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vizrt.applytojob.com/apply/dEdGNsUPpl/Product-Manager-Pro-AV-NewTek'>Product Manager, Pro A/V (NewTek) - Vizrt - Career Page</a></h5> 
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -358,7 +358,7 @@
 <p><span class="badge badge-light">Seattle, WASeattle Seattle, WASeattle, WA     Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.sonetjob.com/job/offer?id=43abe6eb2067e3ad&tc=jo-tw'>SonetJob | Offre d'emploi - Recherche et D?veloppement - Product Manager</a></h5> 
+<h5><a href='https://www.sonetjob.com/job/offer?id=43abe6eb2067e3ad&tc=jo-tw'>SonetJob | Offre d'emploi - Recherche et D?veloppement - Product Manager</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -370,7 +370,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o9Tsbfwp&__jvst=Tenable+Employee&__jvsd=syUaHfw3&__jvsc=Twitter&bid=nFFXpMwX'>Tenable Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o9Tsbfwp&__jvst=Tenable+Employee&__jvsd=syUaHfw3&__jvsc=Twitter&bid=nFFXpMwX'>Tenable Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
